filled out front page a bit and add README.md

--- a/code/app/templates/index.html
+++ b/code/app/templates/index.html
@@ -1,14 +1,16 @@
-<p>
-	<h1>Haoma</h1>
-	<h2>Right at home with the right home health.</h2>
-	<h3>Team Members:</h3>
-	<ul>
-		<li>Patrick Poon: Project Manager, Full-Stack Developer</li>
-		<li>Noah Matsuyoshi: Full-Stack Developer</li>
-		<li>Victor Nazlukhanyan: CEO, Data Scientist</li>
-		<li>Christabelle Pabalan: UI/UX Designer, Data Scientist</li>
-		<li>Zachary Dougherty: DBA, Data Scientist</li>
-		<li>Nicolas Decavel-Bueff: CTO, DBA, Data Scientist</li>
-		<li>Grant Phillips: Data Scientist</li>
-	</ul>
+<p align="middle">
+	<img src="{{ url_for('static', filename='haoma_logo_only.png') }}">
+	<h1 align="middle">Haoma</h1>
+	<h2 align="middle">Right at home with the right home health.</h2>
+	<h3 align="middle">Team Members:</h3>
+	<p align="middle">
+		Patrick Poon: Project Manager, Full-Stack Developer<br>
+		Noah Matsuyoshi: Full-Stack Developer<br>
+		Victor Nazlukhanyan: CEO, Data Scientist<br>
+		Christabelle Pabalan: UI/UX Designer, Data Scientist<br>
+		Zachary Dougherty: DBA, Data Scientist<br>
+		Nicolas Decavel-Bueff: CTO, DBA, Data Scientist<br>
+		Grant Phillips: Data Scientist<br><br>
+		<a href="https://github.com/MSDS698/2021-product-analytics-group-project-group_2_haoma">Check us out on GitHub!</a>
+	</p>
 </p>
