created zipcode search functionality

--- a/code/app/templates/index.html
+++ b/code/app/templates/index.html
@@ -2,6 +2,9 @@
 	<img src="{{ url_for('static', filename='haoma_logo_only.png') }}">
 	<h1 align="middle">Haoma</h1>
 	<h2 align="middle">Right at home with the right home health.</h2>
+
+	<a href="{{ url_for('zipcode_search') }}">Find Home Health agencies in your area!</a>
+
 	<h3 align="middle">Team Members:</h3>
 	<p align="middle">
 		Patrick Poon: Project Manager, Full-Stack Developer<br>
