added funcs.py and test_application.py

--- a/code/app/templates/index.html
+++ b/code/app/templates/index.html
@@ -1,12 +1,12 @@
-<p align="middle">
+<center>
 	<img src="{{ url_for('static', filename='haoma_logo_only.png') }}">
-	<h1 align="middle">Haoma</h1>
-	<h2 align="middle">Right at home with the right home health.</h2>
+	<h1>Haoma</h1>
+	<h2>Right at home with the right home health.</h2>
 
 	<a href="{{ url_for('zipcode_search') }}">Find Home Health agencies in your area!</a>
 
-	<h3 align="middle">Team Members:</h3>
-	<p align="middle">
+	<h3>Team Members:</h3>
+	<p>
 		Patrick Poon: Project Manager, Full-Stack Developer<br>
 		Noah Matsuyoshi: Full-Stack Developer<br>
 		Victor Nazlukhanyan: CEO, Data Scientist<br>
@@ -16,4 +16,4 @@
 		Grant Phillips: Data Scientist<br><br>
 		<a href="https://github.com/MSDS698/2021-product-analytics-group-project-group_2_haoma">Check us out on GitHub!</a>
 	</p>
-</p>
+</center>
