added table with address and number

--- a/code/app/templates/zipcode.html
+++ b/code/app/templates/zipcode.html
@@ -15,7 +15,9 @@
 		<p>Home Health Agencies in {{ zipcode }}</p>
 	{% endif %}
 
-	{% for agency in hh_data %}
-		<b>{{ agency }}</b><br>
+	{% for entry in entries %}
+		{{ entry|safe }}
 	{% endfor %}
+
+
 </center>
