--- a/code/app/templates/base.html
+++ b/code/app/templates/base.html
@@ -144,21 +144,21 @@
 
         <div class="row justify-content-end">
 
-          <div class="col-lg-4 col-md-4 col-6 d-md-flex align-items-md-stretch">
+          <div class="col-lg-4 col-md-4 col-4 d-md-flex align-items-md-stretch">
             <div class="count-box">
               <span data-purecounter-start="0" data-purecounter-end="100" data-purecounter-duration="2" class="purecounter"></span>
               <p>Happy Patients</p>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-4 col-6 d-md-flex align-items-md-stretch">
+          <div class="col-lg-4 col-md-4 col-4 d-md-flex align-items-md-stretch">
             <div class="count-box">
               <span data-purecounter-start="0" data-purecounter-end="20" data-purecounter-duration="4" class="purecounter"></span>
               <p>Agencies</p>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-4 col-6 d-md-flex align-items-md-stretch">
+          <div class="col-lg-4 col-md-4 col-4 d-md-flex align-items-md-stretch">
             <div class="count-box">
               <span data-purecounter-start="0" data-purecounter-end="10" data-purecounter-duration="4" class="purecounter"></span>
               <p>Hospitals</p>
@@ -170,6 +170,19 @@
 
       </div>
     </section><!-- End Counts Section -->
+
+        <!-- ======= Cta Section ======= -->
+    <section id="cta" class="cta">
+      <div class="container" data-aos="zoom-in">
+        <div class="text-center">
+          <h3>Find Home Health Agencies!</h3>
+          <p> Insert your zip code below and we will find home health agencies with ratings in your area!</p>
+          <div class="form-group">
+            <input name="zipcode" id="zipcode" placeholder="Zip Code" required>
+          </div>
+        </div>
+      </div>
+    </section><!-- End Cta Section -->
 
 
     <!-- ======= Team Section ======= -->
