--- a/code/app/templates/base.html
+++ b/code/app/templates/base.html
@@ -43,7 +43,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html">Haoma</a></h1>
+      <h1 class="logo"><a href="/">Haoma</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="base.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
