added 3 pillars + about section

--- a/code/app/templates/base.html
+++ b/code/app/templates/base.html
@@ -67,7 +67,7 @@
       <div class="row justify-content-center">
         <div class="col-xl-7 col-lg-9 text-center">
           <h1>Haoma</h1>
-          <h2>BACK AT HOME WITH THE RIGHT HOME HEALTH</h2>
+          <h2>RIGHT AT HOME WITH THE RIGHT HOME HEALTH</h2>
         </div>
       </div>
       <div class="text-center">
@@ -78,15 +78,15 @@
         <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="200">
           <div class="icon-box">
             <div class="icon"><i class=" ri-folder-user-line"></i></div>
-            <h4 class="title"><a href="">Healthcare Referral System</a></h4>
-            <p class="description">Using state of the art technology to streamline processes for all hospitals, third-party agencies, and insurances</p>
+            <h4 class="title"><a href="">Efficiency</a></h4>
+            <p class="description">Using state of the art technology and real-time data to streamline processes for all hospitals, third-party agencies, and insurances</p>
           </div>
         </div>
 
         <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="300">
           <div class="icon-box">
             <div class="icon"><i class="ri-hand-heart-line"></i></div>
-            <h4 class="title"><a href="">Personalized Recommendations</a></h4>
+            <h4 class="title"><a href="">Personalization</a></h4>
             <p class="description">Providing patients complete transparency on recommendation while improving patient quality of health care</p>
           </div>
         </div>
@@ -94,8 +94,8 @@
         <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="400">
           <div class="icon-box">
             <div class="icon"><i class="ri-database-2-line"></i></div>
-            <h4 class="title"><a href="">Data Driven Solution</a></h4>
-            <p class="description">Using real-time data to minimize delay time and reduce eligibility issues</p>
+            <h4 class="title"><a href="">Transparency</a></h4>
+            <p class="description">Our system provides transparent recommendation explanations, metrics and interactive charts which are visible to patients and all other agents.</p>
           </div>
         </div>
 
@@ -118,14 +118,17 @@
         <div class="row content">
           <div class="col-lg-6">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              An integrated home health referral system aimed to mitigate existing inefficient communication streams, enable a streamlined discharge process, and optimize the time for a patient to get care, as well as the quality. The system will primarily be a recommendation dashboard for discharge planners to quickly and seamlessly generate home health agency recommendations personalized to the patient, with clear and relevant comparison metrics. However, it will also act as a platform where all parties are integrated, having access to the same platform and database to eliminate prior discrepancies. Most of all, it’s a platform enabling patients to get personalized recommendations, faster care, and true transparency. <br><br>
+                
+                Haoma is built on the three fundamental pillars: 
             </p>
             <ul>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
-              <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
+              <li><i class="ri-check-double-line"></i> Efficiency</li>
+              <li><i class="ri-check-double-line"></i> Transparency</li>
+              <li><i class="ri-check-double-line"></i> Personalization</li>
             </ul>
+
+              
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
@@ -225,7 +228,7 @@
               </div>
               <div class="member-info">
                 <h4>Christabelle Pabalan</h4>
-                <span>CEO, UI/UX Designer, Data Scientist</span>
+                <span>Product Strategist, Data Scientist</span>
               </div>
             </div>
           </div>
