--- a/code/app/templates/headerbase.html
+++ b/code/app/templates/headerbase.html
@@ -14,6 +14,7 @@
 <!--  <link href="assets/css/style.css" rel="stylesheet">-->
 <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 
+<head>
 <!-- =======================================================
 * Template Name: OnePage - v4.3.0
 * Template URL: https://bootstrapmade.com/onepage-multipurpose-bootstrap-template/
@@ -30,5 +31,6 @@
     <h1 class="logo"><a href="/">Haoma</a></h1>
   </div>
 </header><!-- End Header -->
+
 {% block content %}{%endblock%}
 </body>
