changed df to datatable to add interactive funcs

--- a/code/app/templates/base.html
+++ b/code/app/templates/base.html
@@ -131,14 +131,14 @@
               <li><i class="ri-check-double-line"></i> Efficiency</li>
               <li><i class="ri-check-double-line"></i> Transparency</li>
               <li><i class="ri-check-double-line"></i> Personalization</li>
-            </ul><br>
-              Check us out on GitHub!
-            </p>
+            </ul><br>Check us out on GitHub!
+              </p>
+            
             <a href="https://github.com/MSDS698/2021-product-analytics-group-project-group_2_haoma" class="btn-learn-more">GitHub</a>
           </div>
         </div>
 
-      </div>
+
     </section><!-- End About Section -->
 
     <!-- ======= Counts Section ======= -->
@@ -180,13 +180,15 @@
         <div class="text-center">
           <a href="{{ url_for('zipcode_search')}}"><h3>Find Home Health Agencies!</h3></a>
           <p> Click above to find home health agencies with ratings in your area!</p>
+            
+
 <!--          <div class="form-group">-->
 <!--&lt;!&ndash;            <form method="POST"; action="zipcode_search?zipcode='+document.getElementsByName('zipcode')[0].value'">&ndash;&gt;-->
 <!--            <form action="{{ url_for('zipcode_search')}}" method="post">-->
 <!--              <input name="zipcode" id="zipcode" placeholder="Zip Code" required>-->
 <!--              <input type="submit">-->
 <!--            </form>-->
-          </div>
+          
         </div>
       </div>
     </section><!-- End Cta Section -->
