--- a/code/app/templates/base.html
+++ b/code/app/templates/base.html
@@ -53,7 +53,7 @@
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
           <li><a class="nav-link scrollto" href="#service">Service</a></li>
-          <li><a class="getstarted scrollto" href="">Sign in</a></li>
+          <li><a class="getstarted scrollto" href="/login">Sign in</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
