--- a/code/app/templates/headerbase.html
+++ b/code/app/templates/headerbase.html
@@ -29,6 +29,17 @@
 <header id="header" class="fixed-top">
   <div class="container d-flex align-items-center justify-content-between">
     <h1 class="logo"><a href="/">Haoma</a></h1>
+
+    <nav id="navbar" class="navbar">
+        <ul>
+          {% if loggedin %}
+          <li><a class="scrollto" href="/logout">Logout</a></li>
+          {% else %}
+          <li><a class="getstarted scrollto" href="/login">Sign in</a></li>
+          {% endif %}
+        </ul>
+        <i class="bi bi-list mobile-nav-toggle"></i>
+      </nav><!-- .navbar -->
   </div>
 </header><!-- End Header -->
 
