--- a/code/app/templates/login.html
+++ b/code/app/templates/login.html
@@ -39,28 +39,33 @@
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
 </head>
-    
   <body>
-      <center><br><br><br>
-    <div class="container">
-      <div class="header">
-        <h3 class="text-muted">Registration</h3>
+    <center><br><br><br>
+    {% if loggedin %}
+      <div class="container">
+        Already logged in
       </div>
+    {% else %}
+      <div class="container">
+        <div class="header">
+          <h3 class="text-muted">Login</h3>
+        </div>
 
-      <div>
-        <form method="POST">
-            {{form.csrf_token}}
-            {{form.username.label}}
-            {{form.username()}}
-            {{form.password.label}}
-            {{form.password()}}
-            {{form.submit()}}
-        </form>
+        <div>
+          <form method="POST">
+              {{form.csrf_token}}
+              {{form.username.label}}
+              {{form.username()}}
+              {{form.password.label}}
+              {{form.password()}}
+              {{form.submit()}}
+          </form>
+        </div>
+        <div>
+            Don't have an account? <a href="/register">Register</a>
+        </div>
       </div>
-      <div>
-          Don't have an account? <a href="/register">Register</a>
-      </div>
-    </div>
+    {% endif %}
   </body>
 </html>
 
