add header navbar to all pages

--- a/code/app/templates/discharge.html
+++ b/code/app/templates/discharge.html
@@ -1,3 +1,9 @@
+{% extends "headerbase.html" %}
+{% block content %}
 <html>
-    Hello {{username}}
+    <body>
+        <center><br><br><br>
+        Hello {{username}}
+    </body>
 </html>
+{%endblock%}
