--- a/code/app/templates/logout.html
+++ b/code/app/templates/logout.html
@@ -1,1 +1,9 @@
-Goodbye {{username}}
+{% extends "headerbase.html" %}
+{% block content %}
+<html>
+    <body>
+        <center><br><br><br>
+        Goodbye {{username}}
+    </body>
+</html>
+{%endblock%}
