--- a/code/app/templates/base.html
+++ b/code/app/templates/base.html
@@ -10,6 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
+  <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 <!--  <link href="assets/img/favicon.png" rel="icon">-->
 <!--  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">-->
 
