--- a/code/app/templates/logout.html
+++ b/code/app/templates/logout.html
@@ -2,7 +2,7 @@
 {% block content %}
 <html>
     <body>
-        <center><br><br><br>
+        <center>
         Goodbye {{username}}
     </body>
 </html>
