--- a/code/app/templates/headerbase.html
+++ b/code/app/templates/headerbase.html
@@ -28,23 +28,37 @@
 
 <body>
 
-<!-- ======= Header ======= -->
-<header id="header" class="fixed-top">
-  <div class="container d-flex align-items-center justify-content-between">
-    <h1 class="logo"><a href="/">Haoma</a></h1>
+  <!-- ======= Header ======= -->
+  <header id="header" class="fixed-top">
+    <div class="container d-flex align-items-center justify-content-between">
+      <h1 class="logo"><a href="/">Haoma</a></h1>
 
-    <nav id="navbar" class="navbar">
-        <ul>
-          {% if loggedin %}
-          <li><a class="scrollto" href="/logout">Logout</a></li>
-          {% else %}
-          <li><a class="getstarted scrollto" href="/login">Sign in</a></li>
-          {% endif %}
-        </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
-  </div>
-</header><!-- End Header -->
+      <nav id="navbar" class="navbar">
+          <ul>
+            {% if loggedin %}
+            <li><a class="scrollto" href="/logout">Logout</a></li>
+            {% else %}
+            <li><a class="getstarted scrollto" href="/login">Sign in</a></li>
+            {% endif %}
+          </ul>
+          <i class="bi bi-list mobile-nav-toggle"></i>
+        </nav><!-- .navbar -->
+    </div>
+  </header><!-- End Header -->
+  <br><br><br><br>
 
-{% block content %}{%endblock%}
+  {% block content %}{%endblock%}
+
+  <div id="preloader"></div>
+  <!-- Vendor JS Files -->
+  <script src="{{ url_for('static', filename='vendor/aos/aos.js') }}"></script>
+  <script src="{{ url_for('static', filename='vendor/bootstrap/js/bootstrap.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='vendor/glightbox/js/glightbox.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='vendor/isotope-layout/isotope.pkgd.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='vendor/php-email-form/validate.js') }}"></script>
+  <script src="{{ url_for('static', filename='vendor/purecounter/purecounter.js') }}"></script>
+  <script src="{{ url_for('static', filename='vendor/swiper/swiper-bundle.min.js') }}"></script>
+
+  <!-- Template Main JS File -->
+  <script src="{{ url_for('static', filename='js/main.js') }}"></script>
 </body>
