Front-end recommendation complete

--- a/code/app/templates/discharge.html
+++ b/code/app/templates/discharge.html
@@ -52,10 +52,20 @@
                                 {{patient_upload_form.last.label}}
                                 {{patient_upload_form.last()}}
                             </div>
+
+                            <div class="mb-3">
+                                {{patient_upload_form.zipcode.label}}
+                                {{patient_upload_form.zipcode()}}
+                            </div>
+                            <div class="mb-3">
+                                {{patient_upload_form.service.label}}
+                                {{patient_upload_form.service()}}
+                            </div>
                             <div class="mb-3">
                                 {{patient_upload_form.file.label}}
                                 {{patient_upload_form.file()}}
                             </div>
+
                         </div>
                     </div>
                     <div class="modal-footer">
