add pics and logo on frontpage

--- a/code/app/templates/base.html
+++ b/code/app/templates/base.html
@@ -46,8 +46,6 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <h1 class="logo"><a href="/">Haoma</a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="base.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -72,6 +70,7 @@
     <div class="container position-relative" data-aos="fade-up" data-aos-delay="100">
       <div class="row justify-content-center">
         <div class="col-xl-7 col-lg-9 text-center">
+          <img src="{{ url_for('static', filename='haoma_logo_only.png') }}" class="img-fluid" alt=""><br>
           <h1>Haoma</h1>
           <h2>RIGHT AT HOME WITH THE RIGHT HOME HEALTH</h2>
         </div>
