--- a/code/app/static/css/style.css
+++ b/code/app/static/css/style.css
@@ -384,9 +384,9 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 100vh;
+  height: 140vh;
   position: relative;
-  /*background: url("../img/haoma_logo_only.png") top center;*/
+  background: url("../img/bg/homecare.jpeg") top center;
   background-size: cover;
   position: relative;
 }
