add agency accounts, agency requests, confirm and deny functionality

--- a/code/app/templates/discharge.html
+++ b/code/app/templates/discharge.html
@@ -98,7 +98,7 @@
                         </div>
                     </div>
                     <div class="modal-footer">
-                        {{patient_upload_form.submit()}}
+                        {{patient_upload_form.submit(class_="btn btn-success")}}
                     </div>
                 </form>
               </div>
