fixed zipcode html

--- a/code/app/templates/zipcode.html
+++ b/code/app/templates/zipcode.html
@@ -2,6 +2,9 @@
 {% extends "headerbase.html" %}
 {% block content %}
 <html>
+    <head>
+  <link href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css" rel="stylesheet">
+    </head>
   <body>
       <center><br><br><br>
     <div class="container">
