--- a/code/app/templates/login.html
+++ b/code/app/templates/login.html
@@ -1,34 +1,14 @@
-{% extends "headerbase.html" %}
+{% include "headerbase.html" %}
+{% extends "loginRegisterBase.html" %}
+
 {% block content %}
-<html>
-  <body>
-    <center>
-    {% if loggedin %}
-      <div class="container">
-        Already logged in
-      </div>
-    {% else %}
-      <div class="container">
-        <div class="header">
-          <h3 class="text-muted">Login</h3>
-        </div>
-
-        <div>
-          <form method="POST">
-              {{form.csrf_token}}
-              {{form.username.label}}
-              {{form.username()}}
-              {{form.password.label}}
-              {{form.password()}}
-              {{form.submit()}}
-          </form>
-        </div>
-        <div>
-            Don't have an account? <a href="/register">Register</a>
-        </div>
-      </div>
-    {% endif %}
-  </body>
-</html>
-
+{{form.csrf_token}}
+<h2>Login</h2>
+<br>
+{{form.username(class="form-control item", placeholder='Username')}}
+{{form.password(class="form-control item", placeholder='Password')}}
+{{form.submit(class="btn btn-block create-account")}}
+<br>
+<br>
+Don't have an account? <a href="/register">Register</a>
 {%endblock%}
