--- a/code/app/static/css/login.css
+++ b/code/app/static/css/login.css
@@ -12,11 +12,17 @@
     border-top-right-radius: 30px;
     border-bottom-left-radius: 30px;
     border-bottom-right-radius: 30px;
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.075);
+    box-shadow: 0px 2px 10px #10121172;
 }
 
 
 .registration-form .item{
+	border-radius: 20px;
+    margin-bottom: 25px;
+    padding: 10px 20px;
+}
+
+.registration-form .menu{
 	border-radius: 20px;
     margin-bottom: 25px;
     padding: 10px 20px;
