--- a/code/app/templates/register.html
+++ b/code/app/templates/register.html
@@ -1,37 +1,18 @@
-{% extends "headerbase.html" %}
-{% block content %}
-<html> 
-  <body>
-    <center><br><br><br>
-    {% if loggedin %}
-      <div class="container">
-        Already logged in
-      </div>
-    {% else %}
-    <div class="container">
-      <div class="header">
-        <h3 class="text-muted">Registration</h3>
-      </div>
+{% include "headerbase.html" %}
+{% extends "loginRegisterBase.html" %}
 
-      <div>
-        <form method="POST">
-            {{form.csrf_token}}<br>
-            {{form.account_type.label}}
-            {{form.account_type()}}<br><br>
-            {{form.username.label}}
-            {{form.username()}}<br><br>
-            {{form.password.label}}
-            {{form.password()}}<br><br>
-            {{form.submit()}}
-        </form>
-        <div>
-            {{"This username already exists" if user_exists else ""}}
-            {{"There are no agencies with that name" if agency_invalid else ""}}
-        </div>
-      </div>
-    </div>
-    {% endif %}
-  </body>
-</html>
+{% block content %}
+{{form.csrf_token}}
+<h2>Register</h2>
+<br>
+<h5 class='text' align='left'>Register as a</h5>
+{{form.account_type(class="form-control item btn btn-secondary dropdown-toggle")}}
+{{form.username(class="form-control item", placeholder='Username')}}
+{{form.password(class="form-control item", placeholder='Password')}}
+{{form.submit(class="btn btn-block create-account")}}
+<div><br><br>
+<p>{{"This username already exists!" if user_exists else ""}}</p>
+  {{"There are no agencies with that name" if agency_invalid else ""}}
+</div>
 
 {%endblock%}
